--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <hr />
 
     <!-- Thêm hình ảnh tuhoc.cc.jpg và khi click chuột sẽ điều hướng đến contact.html  -->
-    <a href="/more-info/contact.html"
-      ><img src="/assets/images/tuhoc.cc.jpg" alt="tuhoc.cc"
+    <a href="./more-info/contact.html"
+      ><img src="./assets/images/tuhoc.cc.jpg" alt="tuhoc.cc"
     /></a>
 
     <h2>About me</h2>
